add_subdirectory(optional)
add_subdirectory(utility)
add_subdirectory(type_traits)
add_subdirectory(static_assert)
add_subdirectory(throw_exception)
add_subdirectory(predef)
add_subdirectory(move)
add_subdirectory(core)
add_subdirectory(config)
add_subdirectory(assert)
add_subdirectory(detail)
add_subdirectory(preprocessor)
add_subdirectory(container_hash)
add_subdirectory(integer)
